fixed overlapping legend

--- a/apps/fishing-map/features/workspace/vessels/VesselEventsLegend.module.css
+++ b/apps/fishing-map/features/workspace/vessels/VesselEventsLegend.module.css
@@ -34,7 +34,6 @@
   display: block;
   width: 12px;
   height: 12px;
-  z-index: 1;
 }
 
 .iconWrapper::before {
@@ -68,7 +67,7 @@
 .encounter::before,
 .loitering::before {
   top: 5px;
-  left: -3px;
+  left: -2px;
 }
 
 .encounter > .icon {
